feat: expanding and cleanup of api
