# docs/openapi.yaml
@@ -9,28 +9,37 @@ tags:
   - name: users
   - name: auth
   - name: pushes
-  - name: reload
+  - name: chargements
 
 paths:
 
-  /add-balance:
+  /chargements/current:
     post:
-      summary: Add new balance to the currently logged in user, using stripe
+      summary: Create a new chargement and set it as the current one
       tags:
-        - reload
+        - chargements
       requestBody:
         required: true
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/AddBalanceRequest'
+              $ref: '#/components/schemas/CreateChargement'
       responses:
         '200':
           description: Payment link generated successfully
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/AddBalanceResponse'
+                $ref: '#/components/schemas/Chargement'
+
+  /chargements/current/cancel:
+    post:
+      summary: Cancel current Chargement
+      tags:
+        - chargements
+      responses:
+        '200':
+          description: Successfully canceled chargement
 
   /pushes:
     get:                                
@@ -138,7 +147,6 @@ paths:
       summary: Check out of the current shopping cart
       tags:
         - shopping-carts
-      parameters:
       responses:
         '200':
           description: Successfully checked out of the current shopping cart
@@ -212,7 +220,7 @@ paths:
           description: The input which should be inserted with an barcode scanner
       responses:
         '200':
-          description: 
+          description: Read
 
   /input/rfid:
     post:
@@ -228,7 +236,7 @@ paths:
           description: The input which should be inserted from an rfid sensor
       responses:
         '200':
-          description:
+          description: Read
           
 
 components:
@@ -343,20 +351,24 @@ components:
 
     
 
-    AddBalanceRequest:
+    CreateChargement:
       type: object
       required:
         - amountToAdd
       properties:
         amountToAdd:
           type: number
-          example: 20.0
+          example: 50.0
 
-    AddBalanceResponse:
+    Chargement:
       type: object
       required:
-        - paymentLink
+        - stripePaymentLink
+        - amountInCents
       properties:
         paymentLink:
           type: string
           example: "https://checkout.stripe.com/..."
+        amount:
+          type: number
+          example: 50.0
